footer on mobile screen fixed

--- a/style.css
+++ b/style.css
@@ -149,6 +149,10 @@ footer{
         width: 90%;
     }
 
+    footer{
+        display: none;
+    }
+
 
     
 }
